# zero-shot-text-classification-encoder

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
documentation/: development.md  literature_review.md  models_architecture.md
models/: __init__.py  base.py  convmatch.py  dynquery.py  late_interaction.py  polyencoder.py  projection.py  spanclass.py
scripts/: analyze_data.py  benchmark.py  dataset.py  generate_data.py  llm_judge.py  playground.py  train.py
